Fix the menu that was not going  100% tlo the left on mobile view

--- a/src/main/css/nav.css
+++ b/src/main/css/nav.css
@@ -209,7 +209,7 @@ ul .nav-login {
         z-index: 2;
         right: 0px;
         width: 100%;
-        padding-right: 0;
+        padding: 0;
     }
 
     #navigation nav {
